http://localhost:8081/api/products work